# cmaketest

./: .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
example/: CMakeLists.txt
include/cmaketest/: cmaketest.hpp
source/: cmaketest.cpp
test/: CMakeLists.txt
test/source/: cmaketest_test.cpp
